open Box2dtestBed tests

--- a/tests/win8_metro/Cocos2d_win8_metro.vcxproj
+++ b/tests/win8_metro/Cocos2d_win8_metro.vcxproj
@@ -337,6 +337,54 @@
     <ClInclude Include="..\..\tests\tests\ZwoptexTest\ZwoptexTest.h" />
     <ClInclude Include="..\..\tinyxml\tinystr.h" />
     <ClInclude Include="..\..\tinyxml\tinyxml.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Box2dView.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\GLES-Render.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Test.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\AddPair.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\ApplyForce.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\BodyTypes.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Breakable.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Bridge.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\BulletTest.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Cantilever.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Car.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Chain.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\CharacterCollision.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\CollisionFiltering.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\CollisionProcessing.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\CompoundShapes.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Confined.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\ContinuousTest.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\DistanceTest.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Dominos.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\DumpShell.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\DynamicTreeTest.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\EdgeShapes.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\EdgeTest.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Gears.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\OneSidedPlatform.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Pinball.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\PolyCollision.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\PolyShapes.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Prismatic.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Pulleys.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Pyramid.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\RayCast.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Revolute.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Rope.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\RopeJoint.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\SensorTest.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\ShapeEditing.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\SliderCrank.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\SphereStack.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\TheoJansen.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Tiles.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\TimeOfImpact.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Tumbler.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\VaryingFriction.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\VaryingRestitution.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\VerticalStack.h" />
+    <ClInclude Include="..\tests\Box2DTestBed\Tests\Web.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
@@ -543,6 +591,10 @@
     <ClCompile Include="..\..\tinyxml\tinyxml.cpp" />
     <ClCompile Include="..\..\tinyxml\tinyxmlerror.cpp" />
     <ClCompile Include="..\..\tinyxml\tinyxmlparser.cpp" />
+    <ClCompile Include="..\tests\Box2DTestBed\Box2dView.cpp" />
+    <ClCompile Include="..\tests\Box2DTestBed\GLES-Render.cpp" />
+    <ClCompile Include="..\tests\Box2DTestBed\Test.cpp" />
+    <ClCompile Include="..\tests\Box2DTestBed\TestEntries.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
