--- a/tests/win8_metro/Cocos2d_win8_metro.vcxproj.filters
+++ b/tests/win8_metro/Cocos2d_win8_metro.vcxproj.filters
@@ -1400,6 +1400,15 @@
     <ClInclude Include="..\tests\Box2DTestBed\Tests\Web.h">
       <Filter>Classes\tests\Box2DTestBed\Tests</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\cocos2dx\platform\win8_metro\DXFontCommon.h">
+      <Filter>cocos2dx\platform\win8_metro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\cocos2dx\platform\win8_metro\FontFileStream.h">
+      <Filter>cocos2dx\platform\win8_metro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\cocos2dx\platform\win8_metro\FontLoader.h">
+      <Filter>cocos2dx\platform\win8_metro</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -2028,6 +2037,12 @@
     </ClCompile>
     <ClCompile Include="..\tests\Box2DTestBed\TestEntries.cpp">
       <Filter>Classes\tests\Box2DTestBed</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\cocos2dx\platform\win8_metro\FontFileStream.cpp">
+      <Filter>cocos2dx\platform\win8_metro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\cocos2dx\platform\win8_metro\FontLoader.cpp">
+      <Filter>cocos2dx\platform\win8_metro</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
